Bash/logs/Inference.sh-51507.log
Running via sbatch on puck6 on Fri Nov 21 10:54:18 AM CET 2025
Python 3.10.13
  File "/home/tleludec/Transcription_whisper/Code/fine-tuning-whisper/Script/inference.py", line 63
    filenames=[b["filename"] for b in batch]
                                            ^
IndentationError: unindent does not match any outer indentation level
computation end :Fri Nov 21 10:54:18 AM CET 2025
